; ModuleID = '/home/carl/AnghaBench/streem/src/extr_iter.c_exec_minmax.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_iter.c_exec_minmax.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.minmax_data = type { i32, i8*, i8*, i64, i32 }

@.str = private unnamed_addr constant [3 x i8] c"|v\00", align 1
@STRM_NG = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@strm_filter = common dso_local global i32 0, align 4
@iter_minmax = common dso_local global i32 0, align 4
@minmax_finish = common dso_local global i32 0, align 4
@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8**, i8**, i32)* @exec_minmax to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exec_minmax(i32* %0, i32 %1, i8** %2, i8** %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8**, align 8
  %10 = alloca i8**, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.minmax_data*, align 8
  %13 = alloca i8*, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8** %2, i8*** %9, align 8
  store i8** %3, i8*** %10, align 8
  store i32 %4, i32* %11, align 4
  %14 = call i8* (...) @strm_nil_value()
  store i8* %14, i8** %13, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load i8**, i8*** %9, align 8
  %18 = call i32 @strm_get_args(i32* %15, i32 %16, i8** %17, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8** %13)
  %19 = call %struct.minmax_data* @malloc(i32 40)
  store %struct.minmax_data* %19, %struct.minmax_data** %12, align 8
  %20 = load %struct.minmax_data*, %struct.minmax_data** %12, align 8
  %21 = icmp ne %struct.minmax_data* %20, null
  br i1 %21, label %24, label %22

22:                                               ; preds = %5
  %23 = load i32, i32* @STRM_NG, align 4
  store i32 %23, i32* %6, align 4
  br label %48

24:                                               ; preds = %5
  %25 = load i32, i32* @TRUE, align 4
  %26 = load %struct.minmax_data*, %struct.minmax_data** %12, align 8
  %27 = getelementptr inbounds %struct.minmax_data, %struct.minmax_data* %26, i32 0, i32 4
  store i32 %25, i32* %27, align 8
  %28 = load i32, i32* %11, align 4
  %29 = load %struct.minmax_data*, %struct.minmax_data** %12, align 8
  %30 = getelementptr inbounds %struct.minmax_data, %struct.minmax_data* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 8
  %31 = load %struct.minmax_data*, %struct.minmax_data** %12, align 8
  %32 = getelementptr inbounds %struct.minmax_data, %struct.minmax_data* %31, i32 0, i32 3
  store i64 0, i64* %32, align 8
  %33 = call i8* (...) @strm_nil_value()
  %34 = load %struct.minmax_data*, %struct.minmax_data** %12, align 8
  %35 = getelementptr inbounds %struct.minmax_data, %struct.minmax_data* %34, i32 0, i32 2
  store i8* %33, i8** %35, align 8
  %36 = load i8*, i8** %13, align 8
  %37 = load %struct.minmax_data*, %struct.minmax_data** %12, align 8
  %38 = getelementptr inbounds %struct.minmax_data, %struct.minmax_data* %37, i32 0, i32 1
  store i8* %36, i8** %38, align 8
  %39 = load i32, i32* @strm_filter, align 4
  %40 = load i32, i32* @iter_minmax, align 4
  %41 = load i32, i32* @minmax_finish, align 4
  %42 = load %struct.minmax_data*, %struct.minmax_data** %12, align 8
  %43 = bitcast %struct.minmax_data* %42 to i8*
  %44 = call i32 @strm_stream_new(i32 %39, i32 %40, i32 %41, i8* %43)
  %45 = call i8* @strm_stream_value(i32 %44)
  %46 = load i8**, i8*** %10, align 8
  store i8* %45, i8** %46, align 8
  %47 = load i32, i32* @STRM_OK, align 4
  store i32 %47, i32* %6, align 4
  br label %48

48:                                               ; preds = %24, %22
  %49 = load i32, i32* %6, align 4
  ret i32 %49
}

declare dso_local i8* @strm_nil_value(...) #1

declare dso_local i32 @strm_get_args(i32*, i32, i8**, i8*, i8**) #1

declare dso_local %struct.minmax_data* @malloc(i32) #1

declare dso_local i8* @strm_stream_value(i32) #1

declare dso_local i32 @strm_stream_new(i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
